@@ -1,3 +1,13 @@
+2012-05-23  Filip Pizlo  <fpizlo@apple.com>
+
+        Every OSR exit on ARM results in a crash
+        https://bugs.webkit.org/show_bug.cgi?id=87307
+
+        Reviewed by Geoffrey Garen.
+
+        * dfg/DFGThunks.cpp:
+        (JSC::DFG::osrExitGenerationThunkGenerator):
+
 2012-05-23  Geoffrey Garen  <ggaren@apple.com>
 
         Refactored heap tear-down to use normal value semantics (i.e., destructors)
